[tool.poetry]
name = "pyrules"
version = "0.1.0"
description = "Rule Evaluation Demo"
authors = ["Stephen L. McMahon <smcmahon@slb.com>"]
license = "N/A"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
